--- a/style.css
+++ b/style.css
@@ -2,3 +2,13 @@ body {
   margin: 0;
   padding: 0;
 }
+
+video{
+  position: absolute;
+  z-index: -1;
+  visibility: hidden;
+}
+
+#canva{
+  position: absolute;
+}
