--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+html, body {
   margin: 0;
   padding: 0;
   font-family: 'Unbounded', cursive;
@@ -20,4 +20,21 @@ video{
   height: 2px;
   background-color: cyan;
   z-index: 99;
+}
+
+#panel{
+  position: absolute;
+  z-index: 2;
+  background: #FFF98D;
+  height: 80px;
+  width: calc(100vw - 60px);
+  top: calc(100vh - 80px);
+  padding-left: 60px;
+  padding-top: 6px;
+}
+
+#title{
+  font-size: 22px;
+  color: #16006D;
+  font-weight: 600;
 }
