--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ video{
   top: calc(100% - 80px);
   padding-left: 40px;
   padding-top: 6px;
+  transition: top 500ms ease;
 }
 
 #title{
@@ -171,7 +172,7 @@ video{
 
 #game-rule-content{
   font-family: "futura-pt", sans-serif;
-  font-weight: 400;
+  font-weight: 600;
   font-style: normal;
   font-size: 1.15rem;
 }
@@ -193,7 +194,7 @@ video{
   z-index: 3;
   background-color: rgba(0, 11, 107, 0.9);
   width: 100%;
-  height: calc(100% - 80px);
+  height: 100%;
   top: 0px;
   opacity: 0;
   transition: opacity 100ms;
@@ -206,7 +207,7 @@ video{
   height: 200px;
   z-index: 4;
   text-align: center;
-  top: calc(45% - 200px * 0.5);
+  top: calc(50% - 200px * 0.5);
   left: calc(50% - 700px * 0.5);
   opacity: 0;
   transition: opacity 100ms;
